# lazilypy

./: LICENSE  README.md  setup.cfg
.github/workflows/: branch-checks.yml  pylint.yml
docs/: context.md
lazily_typed/: __init__.py  lazy.py  logger.py
lazilypy/: __init__.py  defaults.py  lazy.py  logger.py  logging.py
test/: conftest.py  test_int_operators.py  test_numeric_builtins.py  test_seq_operators.py
