[metadata]
name = lazilypy
version = attr: lazilypy.VERSION
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Generic lazy evaluation with proper type hints
license = BSD 3-Clause License

[pycodestyle]
max-line-length= 120
